--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <meta property="og:site_name" content="plants-zombies.github.io" />
       <meta property="og:description" content="Plants vs Zombies on Chromebook brings strategic garden warfare. Defend against zombie hordes using an arsenal of plants in this addictive and entertaining game on the Chromebook platform." />
       <meta property="og:type" content="website" />
-      <meta property="og:image" content="https://plants-zombies.github.io/images/icon_game.png">
+      <meta property="og:image" content="https://plants-zombies.github.io/images/plants-zombies.png">
 
 
 						<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
